tests/errors/binding/main-param.fil
// Value for main parameter not provided
comp main[A]<'G:1>() -> () {

}