tests/errors/binding/main-param.expect
---CODE---
1
---STDERR---
error: `main' requires at least 1 parameters but 0 were provided
  ┌─ tests/errors/binding/main-param.fil:2:6
  │
2 │ comp main[A]<'G:1>() -> () {
  │      ^^^^ `main' requires at least 1 parameters but 0 were provided

error: Incorrect parameter bindings provided to top-level component main
 = Parameter bindings should be provided via the `--bindings` flag in a `.toml` file.

Compilation failed with 2 errors.
Run with --show-models to generate assignments for failing constraints.
